--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "lit": "^3.2.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -19,6 +19,7 @@
     "@types/node": "^22.10.5",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "sass-embedded": "^1.83.1",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
     "vue-tsc": "^2.2.0"
