--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
   "name": "garrettpriddy-fwdthink-project",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "test": "web-test-runner"
   },
   "dependencies": {
     "bootstrap-icons": "^1.11.3",
-    "lit": "^3.2.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@open-wc/testing": "^4.0.0",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.10.5",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "@web/dev-server": "^0.4.6",
+    "@web/test-runner": "^0.19.0",
+    "@web/test-runner-playwright": "^0.11.0",
+    "chai": "^5.1.2",
+    "lit": "^3.2.1",
     "sass-embedded": "^1.83.1",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
