--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "types": ["vite/client", "node", "mocha"],
     "experimentalDecorators": true,
     "useDefineForClassFields": false,
+    "resolveJsonModule": true,
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
