--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "type-check": "vue-tsc --noEmit",
-    "test": "web-test-runner",
+    "test": "web-test-runner --config web-test-runner.config.js",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
@@ -18,12 +18,15 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@esm-bundle/chai": "^4.3.4-fix.0",
     "@open-wc/testing": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^16.0.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.10.5",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "@web/dev-server": "^0.4.6",
+    "@web/dev-server-esbuild": "^1.0.3",
     "@web/test-runner": "^0.19.0",
     "@web/test-runner-playwright": "^0.11.0",
     "chai": "^5.1.2",
