--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "useDefineForClassFields": false,
     "resolveJsonModule": true,
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+   "exclude": ["node_modules", "dist"]
 }
